<resources>
    <string name="app_name">Micro Investment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="welcome_to">Welcome To</string>
    <string name="micro_investment_platform">Micro-Investment Platform</string>
    <string name="get_started">Get Started</string>
    <string name="slogan">Empowering Your Financial Future, One Step at a Time.</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_use_the_app">Please login to use the app</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="login_here">Login here</string>
    <string name="please_fill_in_the_details_to_create_account">Please fill in the details to create account</string>
    <string name="home">Home</string>
    <string name="investments">Investments</string>
    <string name="withdraw">Withdraw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome,</string>
    <string name="icon">icon</string>
    <string name="invest_now">Invest now</string>
    <string name="title">Title</string>
    <string name="select_plan">Select Plan</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="invest">Invest</string>
    <string name="no_data_available">No data available</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="logout">Logout</string>
    <string name="please_accept_app_permissions">Please accept notification permissions</string>
    <string name="ok_btn">OK</string>
    <string name="total_invested_ugx_0">Total Invested: UGX 0</string>
    <string name="total_earnings_ugx_0">Total Earnings: UGX 0</string>
    <string name="available_for_withdrawal_ugx_0">Available for Withdrawal: UGX 0</string>
</resources>