<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/chirp_bold"
            android:text="@string/register_here"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/chirp"
            android:text="@string/please_fill_in_the_details_to_create_account"
            android:textSize="@dimen/_13ssp" />


        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/text_input"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/text_input"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="false">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/text_input"
                android:fontFamily="@font/chirp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/lgn_btn"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />


        <TextView
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/already_have_an_account_login_here"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp" />


    </LinearLayout>


</ScrollView>